--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
   </head>
   <body>
     <script>
-      var text = new Blotter.Text("REFORM", {
-        family : "serif",
-        size : 120,
+      var text = new Blotter.Text("Reform", {
+        family : "san-serif",
+        size : 200,
         fill : "#171717"
       });
 
